--- a/MYMC/Windows/MainWindow.xaml
+++ b/MYMC/Windows/MainWindow.xaml
@@ -13,7 +13,7 @@
                  Loaded="MainWindow_OnLoaded"
                  Topmost="{Binding TopMost}"
                  mc:Ignorable="d"
-                 Title="Youtube Music" Height="450" Width="640">
+                 Title="Youtube Music" Height="132" Width="594">
     <mah:MetroWindow.Resources>
         <converters:FractionConverter x:Key="FractionConverter" />
         <converters:PlaybackStateToIconConverter x:Key="PlaybackStateToIconConverter" />
@@ -192,7 +192,7 @@
                                 Height="30"
                                 Margin="0"
                                 ToolTip="Show Lyrics">
-                            <iconpacks:PackIconFontAwesome Kind="MusicSolid"></iconpacks:PackIconFontAwesome>
+                            <iconpacks:PackIconFontaudio Kind="Microphone"></iconpacks:PackIconFontaudio>
                         </Button>
                         <Button Background="Transparent"
                                 ToolTip="Dislike and Skip"
@@ -214,7 +214,16 @@
                                 BorderThickness="0">
                             <iconpacks:PackIconMaterial Kind="{Binding IsShuffled, Converter={StaticResource BooleanToShuffleIconConverter}}"></iconpacks:PackIconMaterial>
                         </Button>
-
+                        <Button Background="Transparent"
+                                Width="30"
+                                Height="30"
+                                Margin="0"
+                                VerticalAlignment="Top"
+                                Command="{Binding CopyShareUrlCommand}"
+                                ToolTip="Copy Link"
+                                BorderThickness="0">
+                            <iconpacks:PackIconBootstrapIcons Kind="Share"></iconpacks:PackIconBootstrapIcons>
+                        </Button>
                     </UniformGrid>
                         </Border>
 
