--- a/MYMC/Windows/MainWindow.xaml
+++ b/MYMC/Windows/MainWindow.xaml
@@ -25,6 +25,7 @@
         <converters:BooleanToLikedIconConverter x:Key="BooleanToLikedIconConverter"></converters:BooleanToLikedIconConverter>
         <converters:MultiBusyProgressConverter x:Key="MultiBusyProgressConverter"></converters:MultiBusyProgressConverter>
         <converters:EnumToGetShareLinkIconConverter x:Key="EnumToGetShareLinkIconConverter"></converters:EnumToGetShareLinkIconConverter>
+        <converters:ThemeToIconConverter x:Key="ThemeToIconConverter"></converters:ThemeToIconConverter>
     </mah:MetroWindow.Resources>
     <mah:MetroWindow.RightWindowCommands>
         <mah:WindowCommands>
@@ -36,6 +37,10 @@
                           ToolTip="Compact View">
                 <iconpacks:PackIconMaterial Kind="{Binding IsCompact, Converter={StaticResource BooleanToCompactIconConverter}}"></iconpacks:PackIconMaterial>
             </ToggleButton>
+            <Button Command="{Binding ToggleThemeCommand}" 
+                    ToolTip="{Binding Theme}">
+                <iconpacks:PackIconForkAwesome Kind="{Binding Theme, Converter={StaticResource ThemeToIconConverter}}"></iconpacks:PackIconForkAwesome>
+            </Button>
         </mah:WindowCommands>
     </mah:MetroWindow.RightWindowCommands>
     <DockPanel LastChildFill="True">
