--- a/MYMC/Windows/MainWindow.xaml
+++ b/MYMC/Windows/MainWindow.xaml
@@ -26,6 +26,7 @@
         <converters:MultiBusyProgressConverter x:Key="MultiBusyProgressConverter"></converters:MultiBusyProgressConverter>
         <converters:EnumToGetShareLinkIconConverter x:Key="EnumToGetShareLinkIconConverter"></converters:EnumToGetShareLinkIconConverter>
         <converters:ThemeToIconConverter x:Key="ThemeToIconConverter"></converters:ThemeToIconConverter>
+        <converters:AccentToBrushConverter x:Key="AccentToBrushConverter"></converters:AccentToBrushConverter>
     </mah:MetroWindow.Resources>
     <mah:MetroWindow.RightWindowCommands>
         <mah:WindowCommands>
@@ -40,6 +41,13 @@
             <Button Command="{Binding ToggleThemeCommand}" 
                     ToolTip="{Binding Theme}">
                 <iconpacks:PackIconForkAwesome Kind="{Binding Theme, Converter={StaticResource ThemeToIconConverter}}"></iconpacks:PackIconForkAwesome>
+            </Button>
+            <Button Command="{Binding ToggleAccentCommand}"
+                    ToolTip="{Binding Accent}">
+                <Ellipse Width="16" Height="16"
+                         Fill="{Binding Accent, Converter={StaticResource AccentToBrushConverter}}"
+                         StrokeThickness="1"
+                         Stroke="Black"></Ellipse>
             </Button>
         </mah:WindowCommands>
     </mah:MetroWindow.RightWindowCommands>
